# Waydeck

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/: settings.json
docs/: phase2_plan.md  waydeck_blueprint.docx  waydeck_blueprint_insights.md
tests/: test_adb.py  test_config.py  test_device.py  test_placement.py  test_protocol.py  test_router.py
waydeck/: __init__.py  cli.py  config.py  device.py  glibloop.py  netutil.py  placement.py  qr.py  serve.py
waydeck/adapters/: __init__.py  base.py  gnome.py
waydeck/data/gnome-extension/waydeck-placement@waydeck.dev/: extension.js  metadata.json
waydeck/gui/: app.py
waydeck/input/: router.py
waydeck/server/: app.py  protocol.py
waydeck/server/static/: client.js  index.html  style.css
waydeck/stream/: capture.py  encoder.py
waydeck/usb/: adb.py
