[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "waydeck"
version = "0.1.0.dev0"
description = "Turn any old phone into a wireless touch monitor for your Linux desktop. One command. No app. No dongle."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "waydeck contributors" }]
keywords = ["wayland", "gnome", "virtual-monitor", "second-screen", "touchscreen", "pipewire"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: GTK",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Desktop Environment",
    "Topic :: Multimedia :: Video :: Capture",
]
dependencies = [
    "aiohttp>=3.9",
    "qrcode>=7.0",
    # PyGObject binds GLib/Gio/GStreamer. On Debian/Ubuntu prefer the distro
    # packages (python3-gi, gir1.2-gst-plugins-base-1.0) and create venvs with
    # --system-site-packages; the sdist build needs libgirepository headers.
    "PyGObject>=3.42",
]

[project.urls]
Homepage = "https://github.com/anbuchelvan/waydeck"
Issues = "https://github.com/anbuchelvan/waydeck/issues"

[project.scripts]
waydeck = "waydeck.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["waydeck"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["SIM105"]

[tool.pytest.ini_options]
testpaths = ["tests"]
